--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     implementation "androidx.camera:camera-video:${camerax_version}"
     implementation "androidx.camera:camera-view:${camerax_version}"
     implementation "androidx.camera:camera-extensions:${camerax_version}"
+    implementation "androidx.camera:camera-mlkit-vision:${camerax_version}"
+
+    implementation 'com.google.mlkit:barcode-scanning:17.1.0'
+//    implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:18.2.0'
 
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
